# parallel-exercises

./: .travis.yml  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/opencl/: CMakeLists.txt  cl_util.cpp  cl_util.h  cl_util.hpp  info.cpp  main.cpp  saxpy.cl  saxpy.cpp
